<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.ensipoly.match3.fragments.GameMenuFragment"
    android:weightSum="1">

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level1_button" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level2_button" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level3_button" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level4_button" />

</LinearLayout>
