<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ensipoly.match3.fragments.MenuFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >


        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_button"
            android:minWidth="150dp"
            android:layout_marginTop="250dp" />


        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            android:id="@+id/rules_button" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/reset"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            android:id="@+id/reset_button" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            android:id="@+id/exit_button"
            />
    </LinearLayout>


    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:id="@+id/title"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
