<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ensipoly.match3.activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minWidth="150dp"
        android:id="@+id/quitButton"
        android:layout_below="@+id/RulesButton"
        style="@android:style/Widget.Button"
        android:layout_alignStart="@+id/RulesButton"
        android:layout_alignEnd="@+id/RulesButton" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        style="@android:style/Widget.Button"
        android:minWidth="150dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minWidth="150dp"
        android:id="@+id/RulesButton"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:id="@+id/title"
        android:textSize="30sp"
        android:textStyle="normal|bold" />
</RelativeLayout>
